refactor: 컵 기본 이미지 url 변경